<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_theme"
    tools:context=".ActivitySignUp">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:text="@string/go_back"
            android:backgroundTint="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

    </androidx.appcompat.widget.Toolbar>
    <!--rds-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_theme"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/loggingIn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:backgroundTint="@color/purple_500"

                android:layout_margin="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lid"/>



            <EditText
                android:id="@+id/EmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="80dp"

                android:ems="10"
                android:textColor="@color/white"
                android:textColorHint="@color/black_theme_text_color"
                android:background="@drawable/edittextone"
                android:padding="10dp"
                android:paddingStart="15dp"

                android:hint="@string/enter_email"
                android:inputType="textPersonName"
                android:paddingTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"

                android:ems="10"
                android:textColor="@color/white"
                android:textColorHint="@color/black_theme_text_color"
                android:background="@drawable/edittextone"
                android:padding="10dp"
                android:paddingStart="15dp"

                android:hint="@string/enter_password"
                android:inputType="textPersonName"
                android:paddingTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/EmailId" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"

                android:ems="10"
                android:textColor="@color/white"
                android:textColorHint="@color/black_theme_text_color"
                android:background="@drawable/edittextone"
                android:padding="10dp"
                android:paddingStart="15dp"

                android:hint="@string/repeat_password"
                android:inputType="textPersonName"
                android:paddingTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password1" />

            <TextView
                android:id="@+id/loggingInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/You_already_have_an_account"
                android:textColor="@color/white"

                app:layout_constraintTop_toBottomOf="@id/loggingIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_theme_text_color"
                android:text="@string/Enter"
                app:layout_constraintTop_toBottomOf="@id/loggingInText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <LinearLayout
                android:id="@+id/lid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:orientation="horizontal"
                android:background="@drawable/linear_layout_cool"
                app:circularflow_radiusInDP=""
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    />


                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/purple_200"

                    android:gravity="center_vertical"
                    android:paddingStart="10dp"

                    />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/using_agreement_text" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                tools:ignore="NotSibling" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>