<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_theme">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/backround_input"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.appcompat.widget.Toolbar>



    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/Go_back"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/AngleLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/showVirtualMouse"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maximum_deflection_angle"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            >

            <EditText
                android:id="@+id/enterAngle"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittextone"
                android:backgroundTint="@color/backround_input"
                android:layout_gravity="center_vertical"
                android:ems="10"
                android:hint="∠α°"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black_theme_text_color"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showVirtualMouse" />
        </LinearLayout>

    </LinearLayout>








    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="30dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <Button
        android:id="@+id/saveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:layout_margin="15dp"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AngleLL"/>

    <LinearLayout
        android:id="@+id/showVirtualMouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsText"

        >


        <TextView
            android:id="@+id/showVirtualMouseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/show_virtual_mouse"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"

            >

            <CheckBox
                android:id="@+id/showVirtualMouseCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purple_500"
                android:layout_marginStart="10dp"

                />
        </LinearLayout>

    </LinearLayout>

<!--    <Button-->
<!--        android:id="@+id/button2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Button"-->
<!--        android:layout_marginTop="100dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/saveSettings"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->


<!--    <EditText-->
<!--        android:id="@+id/edText"-->
<!--        android:layout_width="140dp"-->
<!--        android:layout_height="45dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:background="@drawable/edittextone"-->
<!--        android:backgroundTint="@color/backround_input"-->
<!--        android:layout_gravity="center_vertical"-->
<!--        android:ems="10"-->
<!--        android:hint="∠α°"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:paddingStart="15dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="@color/black_theme_text_color"-->
<!--        android:textSize="20dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/button2" />-->

<!--    <TextView-->
<!--        android:id="@+id/rcView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="..."-->
<!--        android:textSize="20dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginStart="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/edText"-->
<!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>