<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_theme"
    >


    <TextView
        android:id="@+id/accountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <LinearLayout
        android:id="@+id/UserDetails"
        android:padding="15dp"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_block"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountText"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/profile_block"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/profile_block"
                android:gravity="left"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textColor="@color/purple_text"
                    android:textSize="25dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:text="#23769"
                    android:textColor="@color/black_theme_text_color"
                    android:textSize="25dp" />


            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_without_developer_permissions"
                android:textColor="@color/black_theme_text_color"
                android:textSize="15dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_block"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:gravity="left"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_block"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:gravity="left"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Login:    "
                    android:textColor="#9B7EDD"
                    android:textSize="20dp"
                    />

                <TextView
                    android:id="@+id/profile_login_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="{login}"
                    android:gravity="left"
                    android:textColor="@color/white"
                    android:textSize="20dp"

                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="4dp"
                android:background="#7b7b7b"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_block"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:gravity="left"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Password:    "
                    android:textColor="#9B7EDD"
                    android:textSize="20dp"

                    />

                <TextView
                    android:id="@+id/profile_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="{password}"
                    android:textColor="@color/white"
                    android:textSize="20dp"

                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            >

            <Button
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/Go_back"
                android:backgroundTint="@color/purple_200"
                />

        </LinearLayout>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>